task3/service-minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: task3
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
  - port: 9001
    targetPort: 9001
